HTML5 rewrite. Created header

--- a/resume.html
+++ b/resume.html
@@ -13,154 +13,19 @@
 
 </head>
 <body>
-
-<div id="doc2" class="yui-t7">
-	<div id="inner">
-	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Mike Overby</h1>
-					<h2>Software Engineer</h2>
-				</div>
-
-				<div class="yui-u">
-					<div class="contact-info">
-						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:mikeoverby@outlook.com">mikeoverby@outlook.com</a></h3>
-					</div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
-
-		<div id="bd">
-			<div id="yui-main">
-				<div class="yui-b">
-
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Profile</h2>
-						</div>
-						<div class="yui-u">
-							<p class="enlarge">
-                                An obsessive need to understand the big picture,
-                                coupled with the pragmatism necessary to bring
-                                your software goals to fruition.
-							</p>
-						</div>
-					</div><!--// .yui-gf -->
-
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Skills</h2>
-						</div>
-						<div class="yui-u">
-
-								<div class="talent">
-									<h2>Python</h2>
-									<p>My primary programming language. Great
-                                    for mocking things up and writing things to
-                                    last.</p>
-								</div>
-
-								<div class="talent">
-									<h2>Data Handling</h2>
-									<p>Very comfortable with DML queries using
-                                    PostgreSQL or t-SQL</p>
-								</div>
-
-								<div class="talent">
-									<h2>Java</h2>
-									<p>Used less frequently, but have plenty of
-                                    experience with it.</p>
-								</div>
-						</div>
-					</div><!--// .yui-gf -->
-
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Technical</h2>
-						</div>
-						<div class="yui-u">
-							<ul class="talent">
-								<li>Python</li>
-								<li>Java</li>
-								<li class="last">C</li>
-							</ul>
-
-							<ul class="talent">
-								<li>SQL</li>
-								<li>QlikView</li>
-								<li class="last">Git</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Regular Expressions</li>
-								<li>Windows 7/8</li>
-								<li class="last">Linux</li>
-							</ul>
-						</div>
-					</div><!--// .yui-gf-->
-
-					<div class="yui-gf">
-	
-						<div class="yui-u first">
-							<h2>Experience</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u">
-
-							<div class="job">
-								<h2>Tata Consultancy Services</h2>
-								<h3>Consultant Software Engineer</h3>
-								<h4>Aug 2016-present</h4>
-								<p>Designed administrative dashboards for
-                                a Michigan automotive company, coordinating with
-                                international teams.</p>
-							</div>
-
-							<div class="job last">
-								<h2>University of Washington, Tacoma</h2>
-								<h3>Programming Teacher Assistant</h3>
-								<h4>Jan-Dec 2015</h4>
-								<p>Helped teach an introductory Python course.</p>
-							</div>
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
-
-
-					<div class="yui-gf last">
-						<div class="yui-u first">
-							<h2>Education</h2>
-						</div>
-						<div class="yui-u">
-                            <div class="school">
-                                <h2>University of Washington, Tacoma</h2>
-                                <h3>BS, Computer Science and Systems <strong>3.45 GPA</strong> </h3>
-                            </div>
-                            <div class="school last">
-                                <h2>Pierce College</h2>
-                                <h3>AS, Engineering and Physics</h3>
-                            </div>
-						</div>
-					</div><!--// .yui-gf -->
-
-
-				</div><!--// .yui-b -->
-			</div><!--// yui-main -->
-		</div><!--// bd -->
-
-		<div id="ft">
-			<p>Mike Overby &mdash; <a href="mailto:mikeoverby@outlook.com">mikeoverby@outlook.com</a></p>
-		</div><!--// footer -->
-
-	</div><!-- // inner -->
-
-
-</div><!--// doc -->
-
-
+    <header>
+        <div class='headerblock'>
+            <h1>Mike Overby</h1>
+            <h2><i>Software Engineer</i></h2>
+        </div>
+        <div class='headerblock'>
+            <ul>
+                <li><a href='mailto:mikeoverby@progdisc.club'>mikeoverby@progdisc.club</a></li>
+                <li><a href='https://github.com/lethargilistic'>GitHub</a></li>
+                <li><a href='https://linkedin.com/moverby'>LinkedIn</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
 
