--- a/resume.html
+++ b/resume.html
@@ -137,7 +137,7 @@
                                 <div class="yui-u">
                                     <div class="school">
                                         <h2>University of Washington, Tacoma</h2>
-                                        <h3>BS, Computer Science and Systems <strong>3.45 GPA</strong> </h3>
+                                        <h3>BS, Computer Science and Systems, <i>3.45 GPA</i> </h3>
                                     </div>
                                     <div class="school last">
                                         <h2>Pierce College</h2>
