Added section headers, started styling

--- a/resume.html
+++ b/resume.html
@@ -3,22 +3,22 @@
 <head>
 
     <title>Mike Overby | Software Engineer | mikeoverby@outlook.com</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv='content-type' content='text/html; charset=utf-8' />
 
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+	<meta name='keywords' content='' />
+	<meta name='description' content='' />
 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
-	<link rel="stylesheet" type="text/css" href="style-resume.css" media="all" />
+	<link rel='stylesheet' type='text/css' href='http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css' media='all' /> 
+	<link rel='stylesheet' type='text/css' href='style-resume.css' media='all' />
 
 </head>
 <body>
     <header>
-        <div class='headerblock'>
+        <div class='header_block'>
             <h1>Mike Overby</h1>
             <h2><i>Software Engineer</i></h2>
         </div>
-        <div class='headerblock'>
+        <div class='header_block'>
             <ul>
                 <li><a href='mailto:mikeoverby@progdisc.club'>mikeoverby@progdisc.club</a></li>
                 <li><a href='https://github.com/lethargilistic'>GitHub</a></li>
@@ -26,6 +26,40 @@
             </ul>
         </div>
     </header>
+
+	<section class='main_skills'>
+		<h1>Skills</h1>
+	</section>	
+
+	<section class='other_skills'>
+		<h1>Technical</h1>
+	</section>	
+
+	<section class='work_experience'>
+		<h1>Work Experience</h1>
+	</section>	
+
+	<section class='projects'>
+		<h1>Projects</h1>
+	</section>	
+
+	<section class='education'>
+		<h1>Education</h1>
+	</section>	
+
+	<section class='other'>
+		<h1>Other</h1>
+		<div>
+			<h2>Programming Discussions</h2>
+			<h3>Moderator</h3>
+		</div>
+		<div>Oct 2016-present</div>
+		<p>Am a moderator</p>
+	</section>	
+
+    <footer>
+		<a rel='license' href='http://creativecommons.org/licenses/by-nc-nd/4.0/'><img alt='Creative Commons License' style='border-width:0' src='https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png' /></a><br />This work is licensed under a <a rel='license' href='http://creativecommons.org/licenses/by-nc-nd/4.0/'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+    </footer>
 </body>
 </html>
 
